infra/gateway/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                use_remote_address: true
                generate_request_id: true
                request_id_extension:
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          start_time: "%START_TIME%"
                          request_method: "%REQ(:METHOD)%"
                          request_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_code: "%RESPONSE_CODE%"
                          response_flags: "%RESPONSE_FLAGS%"
                          duration_ms: "%DURATION%"
                          up_cluster: "%UPSTREAM_CLUSTER%"
                          x_request_id: "%REQ(X-REQUEST-ID)%"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: catalog_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api"
                            headers:
                              - name: Accept
                                exact_match: "application/vnd.bookstore.v1+json"
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: catalog_api_rate_limit
                              token_bucket:
                                max_tokens: 100
                                tokens_per_fill: 100
                                fill_interval: 60s
                              filter_enabled:
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              response_headers_to_add:
                                - append: false
                                  header:
                                    key: X-RateLimit-Limit
                                    value: "100"
                          route:
                            cluster: catalog_service
                            timeout: 0s
                        - match:
                            prefix: "/api"
                          direct_response:
                            status: 406
                            body:
                              inline_string: "Unsupported Accept header for Bookstore API"
                        - match:
                            prefix: "/swagger-ui"
                          route:
                            cluster: catalog_service
                            timeout: 0s
                        - match:
                            prefix: "/v3/api-docs"
                          route:
                            cluster: catalog_service
                            timeout: 0s
                        - match:
                            prefix: "/auth"
                          route:
                            cluster: keycloak_service
                            timeout: 0s
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                            body:
                              inline_string: "Not found"
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak:
                          issuer: "http://keycloak:8080/realms/bookstore"
                          remote_jwks:
                            http_uri:
                              uri: "http://keycloak:8080/realms/bookstore/protocol/openid-connect/certs"
                              cluster: keycloak_jwks
                              timeout: 5s
                          payload_in_metadata: "jwt"
                      rules:
                        - match:
                            prefix: "/api"
                          requires:
                            provider_name: keycloak
                        - match:
                            prefix: "/"
                          requires:
                            allow_missing: {}
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: default_rate_limit
                      token_bucket:
                        max_tokens: 1000
                        tokens_per_fill: 1000
                        fill_interval: 60s
                      filter_enabled:
                        default_value:
                          numerator: 0
                          denominator: HUNDRED
                      filter_enforced:
                        default_value:
                          numerator: 0
                          denominator: HUNDRED
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: catalog_service
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: catalog_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: catalog-service
                      port_value: 8080
    - name: keycloak_service
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
    - name: keycloak_jwks
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak_jwks
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
